--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,5 +1,8 @@
 @media screen and (min-width: 32.5em){
 
+    main {
+        grid-template-columns: 1.5fr 1fr;
+    }
 
     main section, .join {
         grid-column: 1/4;
@@ -18,10 +21,12 @@
     .spotlights div {
         margin: 0 auto;
         width: 45%;
+        height: 95%;
     }
 
     .join {
-        display: block;
+        display: flex;
+        justify-content: space-evenly;
         grid-row: 4;
         background: #F9F9F9;
         padding: 15px;
@@ -49,15 +54,19 @@
     }
 
     .event {
-        grid-column: 1/3;
+        grid-column: 1/2;
     }
 
     .weather {
-        grid-column: 3/4;
+        grid-column: 2/3;
+        justify-content: space-evenly;
     }
 
     .chamber-details {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 2fr 2fr;
+        align-items: center;
+        justify-items: center;
     }
 
     .contact-information {
